# pipe_line_mongodb_mysql

./: pyproject.toml
data/: vendas_livros.csv
notebooks/: extract_and_save_data.ipynb  save_data_mysql.ipynb
scripts/: extract_and_save_data.py  save_data_mysql.py  transform_data.py
